src/third_party/cronet/native/bidirectional_stream_engine.h

EXPORT stream_engine* bidirectional_stream_engine_create(
    bool enable_quic,
    const char* quic_user_agent_id,
    bool enable_spdy,
    bool enable_brotli,
    const char* accept_language,
    const char* user_agent,
    unsigned char* trusted_certificate,
    int trusted_certificate_length);