lib/src/third_party/grpc_support/generated_bindings.dart


  /// Creates a new stream object that uses |engine| and |callback|. All stream
  /// tasks are performed asynchronously on the |engine| network thread. |callback|
  /// methods are invoked synchronously on the |engine| network thread, but must
  /// not run tasks on the current thread to prevent blocking networking operations
  /// and causing exceptions during shutdown. The |annotation| is stored in
  /// bidirectional stream for arbitrary use by application.
  ///
  /// Returned |bidirectional_stream*| is owned by the caller, and must be
  /// destroyed using |bidirectional_stream_destroy|.
  ///
  /// Both |calback| and |engine| must remain valid until stream is destroyed.
  ffi.Pointer<bidirectional_stream> bidirectional_stream_create1(
    ffi.Pointer<stream_engine> engine,
    ffi.Pointer<ffi.Void> annotation,
    ffi.Pointer<bidirectional_stream_callback> callback,
  ) {
    return _bidirectional_stream_create1(
      engine,
      annotation,
      callback,
    );
  }

  late final _bidirectional_stream_create1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<bidirectional_stream> Function(
                  ffi.Pointer<stream_engine>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<bidirectional_stream_callback>)>>(
      'bidirectional_stream_create');
  late final _bidirectional_stream_create1 =
      _bidirectional_stream_create1Ptr.asFunction<
          ffi.Pointer<bidirectional_stream> Function(
              ffi.Pointer<stream_engine>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<bidirectional_stream_callback>)>();

  /// Destroys stream object. Destroy could be called from any thread, including
  /// network thread, but is posted, so |stream| is valid until calling task is
  /// complete.
  int bidirectional_stream_destroy1(
    ffi.Pointer<bidirectional_stream> stream,
  ) {
    return _bidirectional_stream_destroy1(
      stream,
    );
  }

  late final _bidirectional_stream_destroy1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<bidirectional_stream>)>>(
      'bidirectional_stream_destroy');
  late final _bidirectional_stream_destroy1 = _bidirectional_stream_destroy1Ptr
      .asFunction<int Function(ffi.Pointer<bidirectional_stream>)>();

  /// Disables or enables auto flush. By default, data is flushed after
  /// every bidirectional_stream_write(). If the auto flush is disabled,
  /// the client should explicitly call bidirectional_stream_flush to flush
  /// the data.
  void bidirectional_stream_disable_auto_flush1(
    ffi.Pointer<bidirectional_stream> stream,
    bool disable_auto_flush,
  ) {
    return _bidirectional_stream_disable_auto_flush1(
      stream,
      disable_auto_flush ? 1 : 0,
    );
  }

  late final _bidirectional_stream_disable_auto_flush1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bidirectional_stream>,
              ffi.Uint8)>>('bidirectional_stream_disable_auto_flush');
  late final _bidirectional_stream_disable_auto_flush1 =
      _bidirectional_stream_disable_auto_flush1Ptr
          .asFunction<void Function(ffi.Pointer<bidirectional_stream>, int)>();

  /// Delays sending request headers until bidirectional_stream_flush()
  /// is called. This flag is currently only respected when QUIC is negotiated.
  /// When true, QUIC will send request header frame along with data frame(s)
  /// as a single packet when possible.
  void bidirectional_stream_delay_request_headers_until_flush1(
    ffi.Pointer<bidirectional_stream> stream,
    bool delay_headers_until_flush,
  ) {
    return _bidirectional_stream_delay_request_headers_until_flush1(
      stream,
      delay_headers_until_flush ? 1 : 0,
    );
  }

  late final _bidirectional_stream_delay_request_headers_until_flush1Ptr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<bidirectional_stream>, ffi.Uint8)>>(
          'bidirectional_stream_delay_request_headers_until_flush');
  late final _bidirectional_stream_delay_request_headers_until_flush1 =
      _bidirectional_stream_delay_request_headers_until_flush1Ptr
          .asFunction<void Function(ffi.Pointer<bidirectional_stream>, int)>();

  /// Starts the stream by sending request to |url| using |method| and |headers|.
  /// If |end_of_stream| is true, then no data is expected to be written. The
  /// |method| is HTTP verb.
  int bidirectional_stream_start1(
    ffi.Pointer<bidirectional_stream> stream,
    ffi.Pointer<ffi.Char> url,
    int priority,
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<bidirectional_stream_header_array> headers,
    bool end_of_stream,
  ) {
    return _bidirectional_stream_start1(
      stream,
      url,
      priority,
      method,
      headers,
      end_of_stream ? 1 : 0,
    );
  }

  late final _bidirectional_stream_start1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<bidirectional_stream_header_array>,
              ffi.Uint8)>>('bidirectional_stream_start');
  late final _bidirectional_stream_start1 =
      _bidirectional_stream_start1Ptr.asFunction<
          int Function(
              ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<bidirectional_stream_header_array>,
              int)>();

  /// Reads response data into |buffer| of |capacity| length. Must only be called
  /// at most once in response to each invocation of the
  /// on_stream_ready()/on_response_headers_received() and on_read_completed()
  /// methods of the bidirectional_stream_callback.
  /// Each call will result in an invocation of the callback's
  /// on_read_completed() method if data is read, or its on_failed() method if
  /// there's an error. The callback's on_succeeded() method is also invoked if
  /// there is no more data to read and |end_of_stream| was previously sent.
  int bidirectional_stream_read1(
    ffi.Pointer<bidirectional_stream> stream,
    ffi.Pointer<ffi.Char> buffer,
    int capacity,
  ) {
    return _bidirectional_stream_read1(
      stream,
      buffer,
      capacity,
    );
  }

  late final _bidirectional_stream_read1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('bidirectional_stream_read');
  late final _bidirectional_stream_read1 =
      _bidirectional_stream_read1Ptr.asFunction<
          int Function(
              ffi.Pointer<bidirectional_stream>, ffi.Pointer<ffi.Char>, int)>();

  /// Writes request data from |buffer| of |buffer_length| length. If auto flush is
  /// disabled, data will be sent only after bidirectional_stream_flush() is
  /// called.
  /// Each call will result in an invocation the callback's on_write_completed()
  /// method if data is sent, or its on_failed() method if there's an error.
  /// The callback's on_succeeded() method is also invoked if |end_of_stream| is
  /// set and all response data has been read.
  int bidirectional_stream_write1(
    ffi.Pointer<bidirectional_stream> stream,
    ffi.Pointer<ffi.Char> buffer,
    int buffer_length,
    bool end_of_stream,
  ) {
    return _bidirectional_stream_write1(
      stream,
      buffer,
      buffer_length,
      end_of_stream ? 1 : 0,
    );
  }

  late final _bidirectional_stream_write1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Uint8)>>('bidirectional_stream_write');
  late final _bidirectional_stream_write1 =
      _bidirectional_stream_write1Ptr.asFunction<
          int Function(ffi.Pointer<bidirectional_stream>, ffi.Pointer<ffi.Char>,
              int, int)>();

  /// Flushes pending writes. This method should not be called before invocation of
  /// on_stream_ready() method of the bidirectional_stream_callback.
  /// For each previously called bidirectional_stream_write()
  /// a corresponding on_write_completed() callback will be invoked when the buffer
  /// is sent.
  void bidirectional_stream_flush1(
    ffi.Pointer<bidirectional_stream> stream,
  ) {
    return _bidirectional_stream_flush1(
      stream,
    );
  }

  late final _bidirectional_stream_flush1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<bidirectional_stream>)>>(
      'bidirectional_stream_flush');
  late final _bidirectional_stream_flush1 = _bidirectional_stream_flush1Ptr
      .asFunction<void Function(ffi.Pointer<bidirectional_stream>)>();

  /// Cancels the stream. Can be called at any time after
  /// bidirectional_stream_start(). The on_canceled() method of
  /// bidirectional_stream_callback will be invoked when cancelation
  /// is complete and no further callback methods will be invoked. If the
  /// stream has completed or has not started, calling
  /// bidirectional_stream_cancel() has no effect and on_canceled() will not
  /// be invoked. At most one callback method may be invoked after
  /// bidirectional_stream_cancel() has completed.
  void bidirectional_stream_cancel1(
    ffi.Pointer<bidirectional_stream> stream,
  ) {
    return _bidirectional_stream_cancel1(
      stream,
    );
  }

  late final _bidirectional_stream_cancel1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<bidirectional_stream>)>>(
      'bidirectional_stream_cancel');
  late final _bidirectional_stream_cancel1 = _bidirectional_stream_cancel1Ptr
      .asFunction<void Function(ffi.Pointer<bidirectional_stream>)>();

  /// Returns true if the |stream| was successfully started and is now done
  /// (succeeded, canceled, or failed).
  /// Returns false if the |stream| stream is not yet started or is in progress.
  bool bidirectional_stream_is_done1(
    ffi.Pointer<bidirectional_stream> stream,
  ) {
    return _bidirectional_stream_is_done1(
          stream,
        ) !=
        0;
  }

  late final _bidirectional_stream_is_done1Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Uint8 Function(ffi.Pointer<bidirectional_stream>)>>(
      'bidirectional_stream_is_done');
  late final _bidirectional_stream_is_done1 = _bidirectional_stream_is_done1Ptr
      .asFunction<int Function(ffi.Pointer<bidirectional_stream>)>();

  ffi.Pointer<stream_engine> bidirectional_stream_engine_create(
    bool enable_quic,
    ffi.Pointer<ffi.Char> quic_user_agent_id,
    bool enable_spdy,
    bool enable_brotli,
    ffi.Pointer<ffi.Char> accept_language,
    ffi.Pointer<ffi.Char> user_agent,
    ffi.Pointer<ffi.UnsignedChar> trusted_certificate,
    int trusted_certificate_length,
  ) {
    return _bidirectional_stream_engine_create(
      enable_quic ? 1 : 0,
      quic_user_agent_id,
      enable_spdy ? 1 : 0,
      enable_brotli ? 1 : 0,
      accept_language,
      user_agent,
      trusted_certificate,
      trusted_certificate_length,
    );
  }
